[b]Version 0.6.3[/b]:

(2008-09-06)
 * Added a new option in Preferences->Performance: Threads for decoding.
   Sets the number of threads to use for decoding (for MPEG-1/2 and H.264 only).
   It could be useful for multicore processors.
 * Bugfix: the volume may be changed on startup even if the option "Change 
   volume on every file" was off. 

(2008-09-01)
 * The option "Repaint background of the video window" (in Preferences->
   Advanced) is now enabled by default in linux. It seems with newer versions
   of Qt it works well with it. If you have problems with the video window
   going blank, just disable the option.
 * The single instance option is now disabled by default on Windows, as some 
   people reported smplayer didn't start with it.
 * 2nd try to make "gl:yuv=2:force-pbo:ati-hack" the default vo on Windows
   Vista.

(2008-08-28)
 * Set the frame counter to 0 when starting to play a file. Fixes bug
   #2080802.
 * Added in Preferences->Advanced an option to select the preferred network
   connection, IPv4 or IPv6. (IPv4 is the default)

(2008-08-26)
 * Added a new option for smplayer.ini: report_mplayer_crashes. If set to
   false, smplayer won't display the error dialog when mplayer crashes or
   fails to start.

(2008-08-25)
 * Added the Arabic translation, by Muhammad Nour Hajj Omar 
   <arabianheart@live.com>
 * Added some options in menu Play->Speed to increase/decrease the
   speed by 1% and 4%.
 * Bugfix: the gamma was not remembered. Fixes bug #2073257.
 * Moved the log's section in Preferences->Advanced to a new tab.

(2008-08-24)
 * Fix: some of the actions passed to -actions may not work as expected
   because they might be executed when the video is not playing yet.
   This should now be fixed, as if a file is passed on command line, the
   actions are not run until the video has started to play. (If there's no
   file on command line the actions are run immediately)

(2008-08-21)